# MaaS

./: .gitignore  Makefile  README.md  RPC_COMPARISON.md  go.mod  go.sum
MasS-python/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml
MasS-python/alembic/: env.py
MasS-python/alembic/versions/: c12ab3d4e5f6_add_model_metadata_and_extra_fields.py  fb879fde9ca5_create_models_tables.py
MasS-python/api_gateway/: main.py
MasS-python/api_gateway/internal/client/: grpc_client.py
MasS-python/api_gateway/internal/config/: __init__.py  settings.py
MasS-python/api_gateway/internal/handler/: __init__.py  config_handler.py  health_handler.py  model_handler.py  user_handler.py
MasS-python/api_gateway/internal/middleware/: __init__.py  logger.py  metrics.py  recovery.py  request_id.py
MasS-python/api_gateway/internal/model/: __init__.py  model.py  user.py  user_entity.py
MasS-python/api_gateway/internal/repository/: __init__.py  (+2 more)
MasS-python/configs/: config.development.yaml  config.production.yaml  config.yaml
MasS-python/docs/: SKILL.md
MasS-python/docs/01-overview/: README.md
MasS-python/docs/02-phase1/: README.md  node-1-1.md  node-1-2.md  node-1-3.md  node-1-4.md  node-1-5.md  node-1-6.md
MasS-python/docs/03-phase2/: README.md  node-2-1.md  node-2-2.md
MasS-python/docs/04-phase3/: README.md
MasS-python/docs/05-phase4/: README.md
MasS-python/model_registry/: main.py
MasS-python/scripts/: test_grpc.py  test_model_repo.py
MasS-python/shared/proto/: __init__.py  model.proto  model_pb2.py  model_pb2_grpc.py
(+93 files in other folders)
